# guestbook-bindgen

./: .gitignore  Cargo.toml  Makefile  README.md  clean.js  package.json  renovate.json  test.js  test.ts
env/: env.js  package.json
pkg/: env.js  index.js
program/: Cargo.toml
program/src/: lib.rs
src/: lib.rs
wrapper/: Cargo.toml
wrapper/src/: lib.rs
